--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,4 +1,11 @@
 .element__image {
   width: 100%;
   display: block;
+  object-position: center;
+  object-fit: cover;
+  height: 282px;
+}
+
+.element__image:hover {
+  cursor: pointer;
 }
