--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -1,7 +1,7 @@
 .popup__save-button {
   width: 358px;
   height: 50px;
-  margin: 0 36px 0;
+  margin: 19px 36px 0;
   padding: 0;
   background-color: black;
   color: #fff;
@@ -11,17 +11,20 @@
   font-size: 18px;
   line-height: 22px;
   transition: 0.3s;
+  border: 0;
+  border-radius: 2px;
 }
 .popup__save-button:hover {
   opacity: 0.6;
+  cursor: pointer;
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 650px) {
   .popup__save-button {
     width: 236px;
     height: 46px;
     font-size: 14px;
     line-height: 17px;
-    margin: 0 22px 0;
+    margin: 15px 22px 0;
   }
 }
