--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,16 +1,18 @@
 .profile__edit-button {
   background-image: url(../../../images/edit-button.svg);
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center;  
   width: 24px;
   height: 24px;
   border: 1px solid #fff;
   background-color: transparent;
   transition: 0.3s;
+  background-size: 10px;
 }
 
 .profile__edit-button:hover {
   opacity: 0.6;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 450px) {
@@ -18,5 +20,6 @@
     width: 18px;
     height: 18px;
     align-self: baseline;
+    background-size: 7.5px;
   }
 }
