--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -4,6 +4,8 @@
   max-width: 880px;
   column-gap: 30px;
   margin: 0 auto 51px;
+  flex-wrap: nowrap;
+  position: relative;
 }
 @media screen and (max-width: 920px) {
   .profile {
