--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -6,8 +6,9 @@
   line-height: 17px;
   border: 0;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  margin-top: 13px;
   margin-left: 36px;
-  margin-bottom: 30px;
+  margin-bottom: 5px;
   box-sizing: border-box;
   padding-bottom: 13px;
 }
