--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -40,3 +40,8 @@
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__image-title/popup__image-title.css);
 @import url(../blocks/element/__trash/element__trash.css);
+
+@import url(../blocks/popup/__error/popup__error.css);
+@import url(../blocks/popup/__form/_type/popup__form_type_error.css);
+@import url(../blocks/popup/__error/visible/popup__error_visible.css);
+@import url(../blocks/popup/__save-button/_disabled/popup__save-button_disabled.css);
