--- a/src/blocks/profile/__title/profile__title.css
+++ b/src/blocks/profile/__title/profile__title.css
@@ -1,4 +1,5 @@
 .profile__title {
+  max-width: 400px;
   font-size: 42px;
   line-height: 114%;
   font-weight: 500;
@@ -6,7 +7,7 @@
   margin: 0;
   white-space: nowrap; 
   text-overflow: ellipsis;
-  
+  overflow: hidden;  
 }
 
 @media screen and (max-width: 450px) {
