--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -8,6 +8,8 @@
 
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__avatar-block/profile__avatar-block.css);
+@import url(../blocks/profile/__avatar-edit/profile__avatar-edit.css);
 @import url(../blocks/profile/__profile-info/profile__profile-info.css);
 @import url(../blocks/profile/__titles/profile__titles.css);
 @import url(../blocks/profile/__title/profile__title.css);
@@ -23,6 +25,8 @@
 @import url(../blocks/element/__title-text/element__title-text.css);
 @import url(../blocks/element/__like-button/element__like-button.css);
 @import url(../blocks/element/__like-button/_active/element__like-button_active.css);
+@import url(../blocks/element/__title-like-num/element__title-like-num.css);
+@import url(../blocks/element/__like-box/element__like-box.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__text/footer__text.css);
@@ -45,3 +49,6 @@
 @import url(../blocks/popup/__form/_type/popup__form_type_error.css);
 @import url(../blocks/popup/__error/visible/popup__error_visible.css);
 @import url(../blocks/popup/__save-button/_disabled/popup__save-button_disabled.css);
+@import url(../blocks/element/__trash/_disable/element__trash_disable.css);
+
+
